added batch send project data
